--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "next": "latest",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0"
   },
   "devDependencies": {
     "cypress": "8.2.0",
