--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-google-recaptcha": "^2.1.0"
+    "react-google-recaptcha-v3": "^1.9.8"
   },
   "devDependencies": {
     "cypress": "8.2.0",
